<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="inspect_user">user</string>
    <string name="inspect_photo">photo</string>
    <string name="inspect_album">Album</string>
    <string name="inspect_add_album">Add album</string>
    <string name="inspect_add_user">Add user</string>
    <string name="inspect_add_photo">Add photo</string>
    <string name="name_title">Name</string>
    <string name="delete_button">Delete</string>
    <string name="save_button">Save</string>
    <string name="inspect_save">Save</string>
    <string name="inspect_delete">Delete</string>
    <string name="username_title">Username</string>
    <string name="email_title">Email</string>
    <string name="image_title">Image Title</string>
    <string name="url_title">Image Url</string>
    <string name="thumbnail_url">Image thumbnail Url</string>
    <string name="album_title">Title</string>
    <string name="label_album">Album:</string>
    <string name="menu_albums_title">Albums</string>
    <string name="menu_users_title">Users</string>
    <string name="menu_photos_title">Photos</string>
    <string name="close_button">Close</string>
    <string name="error_image">error image</string>


    <string name="label_title_no_internet_error">Sin conexion a internet</string>
    <string name="label_desc_no_internet_error">¿Tienes conexion a internet? No hemos podido obtener la informacion porque no se tiene una conexion a internet</string>


    <string name="label_title_unknown_error">Error en nuestra app</string>
    <string name="label_desc_unknown_error">Lo sentimos, se ha producido un error inesperado en la App. Intentaremos resolverlo lo antes posible</string>


    <string name="label_title_server_error">Error en nuestro servidor</string>
    <string name="label_desc_server_error">Lo sentimos, se ha producido un error en nuestro servidor. Por favor, intentalo más tarde</string>
</resources>