<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/photo_form_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_l">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/image_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_l"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/input_username"
            android:singleLine="true"
            tools:text="Photo1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/url_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url_title"
        app:layout_constraintEnd_toEndOf="@id/title_layout"
        app:layout_constraintStart_toStartOf="@id/title_layout"
        app:layout_constraintTop_toBottomOf="@id/title_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_l"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/input_email"
            android:singleLine="true"
            tools:text="https://unsplash.com/es/fotos/s5kTY-Ve1c0" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/thumbnail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/thumbnail_url"
        app:layout_constraintEnd_toEndOf="@id/title_layout"
        app:layout_constraintStart_toStartOf="@id/title_layout"
        app:layout_constraintTop_toBottomOf="@id/url_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_l"
            android:imeOptions="actionDone"
            android:singleLine="true"
            tools:text="https://unsplash.com/es/fotos/s5kTY-Ve1c0" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/inspect_delete"
        android:text="@string/delete_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thumbnail_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/inspect_save"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thumbnail_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>